@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -27,22 +27,21 @@
 package jdk.internal.foreign;
 
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
-import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment.Scope;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.VarHandle;
 import java.lang.ref.Cleaner;
-import java.lang.ref.Reference;
 import java.util.Objects;
+
+import jdk.internal.foreign.GlobalSession.HeapSession;
 import jdk.internal.misc.ScopedMemoryAccess;
-import jdk.internal.ref.CleanerFactory;
 import jdk.internal.vm.annotation.ForceInline;
-import sun.nio.ch.DirectBuffer;
 
 /**
  * This class manages the temporal bounds associated with a memory segment as well
  * as thread confinement. A session has a liveness bit, which is updated when the session is closed
- * (this operation is triggered by {@link MemorySession#close()}). This bit is consulted prior
+ * (this operation is triggered by {@link MemorySessionImpl#close()}). This bit is consulted prior
  * to memory access (see {@link #checkValidStateRaw()}).
  * There are two kinds of memory session: confined memory session and shared memory session.
  * A confined memory session has an associated owner thread that confines some operations to
@@ -52,40 +51,57 @@ import sun.nio.ch.DirectBuffer;
  * shared sessions use a more sophisticated synchronization mechanism, which guarantees that no concurrent
  * access is possible when a session is being closed (see {@link jdk.internal.misc.ScopedMemoryAccess}).
  */
-public abstract non-sealed class MemorySessionImpl implements MemorySession, SegmentAllocator {
-    final ResourceList resourceList;
-    final Cleaner.Cleanable cleanable;
-    final Thread owner;
-
+public abstract sealed class MemorySessionImpl
+        implements Scope
+        permits ConfinedSession, GlobalSession, SharedSession {
     static final int OPEN = 0;
-    static final int CLOSING = -1;
-    static final int CLOSED = -2;
-
-    int state = OPEN;
+    static final int CLOSED = -1;
 
     static final VarHandle STATE;
+    static final int MAX_FORKS = Integer.MAX_VALUE;
+
+    static final ScopedMemoryAccess.ScopedAccessError ALREADY_CLOSED = new ScopedMemoryAccess.ScopedAccessError(MemorySessionImpl::alreadyClosed);
+    static final ScopedMemoryAccess.ScopedAccessError WRONG_THREAD = new ScopedMemoryAccess.ScopedAccessError(MemorySessionImpl::wrongThread);
+    // This is the session of all zero-length memory segments
+    public static final MemorySessionImpl GLOBAL_SESSION = new GlobalSession();
+
+    final ResourceList resourceList;
+    final Thread owner;
+    int state = OPEN;
 
     static {
         try {
             STATE = MethodHandles.lookup().findVarHandle(MemorySessionImpl.class, "state", int.class);
-        } catch (Throwable ex) {
+        } catch (Exception ex) {
             throw new ExceptionInInitializerError(ex);
         }
     }
 
-    static final int MAX_FORKS = Integer.MAX_VALUE;
+    public Arena asArena() {
+        return new ArenaImpl(this);
+    }
 
-    @Override
+    @ForceInline
+    public static MemorySessionImpl toMemorySession(Arena arena) {
+        return (MemorySessionImpl) arena.scope();
+    }
+
+    public final boolean isCloseableBy(Thread thread) {
+        Objects.requireNonNull(thread);
+        return isCloseable() &&
+                (owner == null || owner == thread);
+    }
+
     public void addCloseAction(Runnable runnable) {
         Objects.requireNonNull(runnable);
         addInternal(ResourceList.ResourceCleanup.ofRunnable(runnable));
     }
 
     /**
-     * Add a cleanup action. If a failure occurred (because of a add vs. close race), call the cleanup action.
+     * Add a cleanup action. If a failure occurred (because of an add vs. close race), call the cleanup action.
      * This semantics is useful when allocating new memory segments, since we first do a malloc/mmap and _then_
      * we register the cleanup (free/munmap) against the session; so, if registration fails, we still have to
-     * cleanup memory. From the perspective of the client, such a failure would manifest as a factory
+     * clean up memory. From the perspective of the client, such a failure would manifest as a factory
      * returning a segment that is already "closed" - which is always possible anyway (e.g. if the session
      * is closed _after_ the cleanup for the segment is registered but _before_ the factory returns the
      * new segment to the client). For this reason, it's not worth adding extra complexity to the segment
@@ -111,46 +127,31 @@ public abstract non-sealed class MemorySessionImpl implements MemorySession, Seg
         resourceList.add(resource);
     }
 
-    protected MemorySessionImpl(Thread owner, ResourceList resourceList, Cleaner cleaner) {
+    protected MemorySessionImpl(Thread owner, ResourceList resourceList) {
         this.owner = owner;
         this.resourceList = resourceList;
-        cleanable = (cleaner != null) ?
-            cleaner.register(this, resourceList) : null;
     }
 
-    public static MemorySession createConfined(Thread thread, Cleaner cleaner) {
-        return new ConfinedSession(thread, cleaner);
+    public static MemorySessionImpl createConfined(Thread thread) {
+        return new ConfinedSession(thread);
     }
 
-    public static MemorySession createShared(Cleaner cleaner) {
-        return new SharedSession(cleaner);
+    public static MemorySessionImpl createShared() {
+        return new SharedSession();
     }
 
-    public static MemorySessionImpl createImplicit() {
-        return new ImplicitSession();
+    public static MemorySessionImpl createImplicit(Cleaner cleaner) {
+        return new ImplicitSession(cleaner);
     }
 
-    @Override
-    public MemorySegment allocate(long bytesSize, long bytesAlignment) {
-        return MemorySegment.allocateNative(bytesSize, bytesAlignment, this);
+    public static MemorySessionImpl createHeap(Object ref) {
+        return new HeapSession(ref);
     }
 
     public abstract void release0();
 
     public abstract void acquire0();
 
-    @Override
-    public final boolean equals(Object o) {
-        return (o instanceof MemorySession other) &&
-            toSessionImpl(other) == this;
-    }
-
-    @Override
-    public final int hashCode() {
-        return super.hashCode();
-    }
-
-    @Override
     public void whileAlive(Runnable action) {
         Objects.requireNonNull(action);
         acquire0();
@@ -161,12 +162,13 @@ public abstract non-sealed class MemorySessionImpl implements MemorySession, Seg
         }
     }
 
-    /**
-     * Returns "owner" thread of this session.
-     * @return owner thread (or null for a shared session)
-     */
     public final Thread ownerThread() {
         return owner;
+    }
+
+    public final boolean isAccessibleBy(Thread thread) {
+        Objects.requireNonNull(thread);
+        return owner == null || owner == thread;
     }
 
     /**
@@ -175,18 +177,6 @@ public abstract non-sealed class MemorySessionImpl implements MemorySession, Seg
      */
     public boolean isAlive() {
         return state >= OPEN;
-    }
-
-    @Override
-    public MemorySession asNonCloseable() {
-        return isCloseable() ?
-                new NonCloseableView(this) : this;
-    }
-
-    @ForceInline
-    public static MemorySessionImpl toSessionImpl(MemorySession session) {
-        return session instanceof MemorySessionImpl sessionImpl ?
-                sessionImpl : ((NonCloseableView)session).session;
     }
 
     /**
@@ -210,7 +200,7 @@ public abstract non-sealed class MemorySessionImpl implements MemorySession, Seg
     /**
      * Checks that this session is still alive (see {@link #isAlive()}).
      * @throws IllegalStateException if this session is already closed or if this is
-     * a confined session and this method is called outside of the owner thread.
+     * a confined session and this method is called outside the owner thread.
      */
     public void checkValidState() {
         try {
@@ -220,12 +210,15 @@ public abstract non-sealed class MemorySessionImpl implements MemorySession, Seg
         }
     }
 
+    public static void checkValidState(MemorySegment segment) {
+        ((AbstractMemorySegmentImpl)segment).sessionImpl().checkValidState();
+    }
+
     @Override
     protected Object clone() throws CloneNotSupportedException {
         throw new CloneNotSupportedException();
     }
 
-    @Override
     public boolean isCloseable() {
         return true;
     }
@@ -233,166 +226,14 @@ public abstract non-sealed class MemorySessionImpl implements MemorySession, Seg
     /**
      * Closes this session, executing any cleanup action (where provided).
      * @throws IllegalStateException if this session is already closed or if this is
-     * a confined session and this method is called outside of the owner thread.
+     * a confined session and this method is called outside the owner thread.
      */
-    @Override
     public void close() {
-        try {
-            justClose();
-            if (cleanable != null) {
-                cleanable.clean();
-            } else {
-                resourceList.cleanup();
-            }
-        } finally {
-            Reference.reachabilityFence(this);
-        }
+        justClose();
+        resourceList.cleanup();
     }
 
     abstract void justClose();
-
-    /**
-     * The global, non-closeable, shared session. Similar to a shared session, but its {@link #close()} method throws unconditionally.
-     * Adding new resources to the global session, does nothing: as the session can never become not-alive, there is nothing to track.
-     * Acquiring and or releasing a memory session similarly does nothing.
-     */
-    static class GlobalSessionImpl extends MemorySessionImpl {
-
-        final Object ref;
-
-        public GlobalSessionImpl(Object ref) {
-            super(null, null ,null);
-            this.ref = ref;
-        }
-
-        @Override
-        @ForceInline
-        public void release0() {
-            // do nothing
-        }
-
-        @Override
-        public boolean isCloseable() {
-            return false;
-        }
-
-        @Override
-        @ForceInline
-        public void acquire0() {
-            // do nothing
-        }
-
-        @Override
-        void addInternal(ResourceList.ResourceCleanup resource) {
-            // do nothing
-        }
-
-        @Override
-        public void justClose() {
-            throw nonCloseable();
-        }
-    }
-
-    public static final MemorySessionImpl GLOBAL = new GlobalSessionImpl(null);
-
-    public static MemorySessionImpl heapSession(Object ref) {
-        return new GlobalSessionImpl(ref);
-    }
-
-    /**
-     * This is an implicit, GC-backed memory session. Implicit sessions cannot be closed explicitly.
-     * While it would be possible to model an implicit session as a non-closeable view of a shared
-     * session, it is better to capture the fact that an implicit session is not just a non-closeable
-     * view of some session which might be closeable. This is useful e.g. in the implementations of
-     * {@link DirectBuffer#address()}, where obtaining an address of a buffer instance associated
-     * with a potentially closeable session is forbidden.
-     */
-    static class ImplicitSession extends SharedSession {
-
-        public ImplicitSession() {
-            super(CleanerFactory.cleaner());
-        }
-
-        @Override
-        public void release0() {
-            Reference.reachabilityFence(this);
-        }
-
-        @Override
-        public void acquire0() {
-            // do nothing
-        }
-
-        @Override
-        public boolean isCloseable() {
-            return false;
-        }
-
-        @Override
-        public void justClose() {
-            throw nonCloseable();
-        }
-    }
-
-    /**
-     * This is a non-closeable view of another memory session. Instances of this class are used in resource session
-     * accessors (see {@link MemorySegment#session()}). This class forwards all session methods to the underlying
-     * "root" session implementation, and throws {@link UnsupportedOperationException} on close. This class contains
-     * a strong reference to the original session, so even if the original session is dropped by the client
-     * it would still be reachable by the GC, which is important if the session is implicitly closed.
-     */
-    public final static class NonCloseableView implements MemorySession {
-        final MemorySessionImpl session;
-
-        public NonCloseableView(MemorySessionImpl session) {
-            this.session = session;
-        }
-
-        @Override
-        public boolean isAlive() {
-            return session.isAlive();
-        }
-
-        @Override
-        public boolean isCloseable() {
-            return false;
-        }
-
-        @Override
-        public Thread ownerThread() {
-            return session.ownerThread();
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            return session.equals(o);
-        }
-
-        @Override
-        public int hashCode() {
-            return session.hashCode();
-        }
-
-        @Override
-        public void whileAlive(Runnable action) {
-            session.whileAlive(action);
-        }
-
-        @Override
-        public MemorySession asNonCloseable() {
-            return this;
-        }
-
-        @Override
-        public void addCloseAction(Runnable runnable) {
-            session.addCloseAction(runnable);
-        }
-
-        @Override
-        public void close() {
-            throw new UnsupportedOperationException();
-        }
-    }
 
     /**
      * A list of all cleanup actions associated with a memory session. Cleanup actions are modelled as instances
@@ -412,10 +253,23 @@ public abstract non-sealed class MemorySessionImpl implements MemorySession, Seg
         }
 
         static void cleanup(ResourceCleanup first) {
+            RuntimeException pendingException = null;
             ResourceCleanup current = first;
             while (current != null) {
-                current.cleanup();
+                try {
+                    current.cleanup();
+                } catch (RuntimeException ex) {
+                    if (pendingException == null) {
+                        pendingException = ex;
+                    } else if (ex != pendingException) {
+                        // note: self-suppression is not supported
+                        pendingException.addSuppressed(ex);
+                    }
+                }
                 current = current.next;
+            }
+            if (pendingException != null) {
+                throw pendingException;
             }
         }
 
@@ -464,7 +318,4 @@ public abstract non-sealed class MemorySessionImpl implements MemorySession, Seg
         return new UnsupportedOperationException("Attempted to close a non-closeable session");
     }
 
-    static final ScopedMemoryAccess.ScopedAccessError ALREADY_CLOSED = new ScopedMemoryAccess.ScopedAccessError(MemorySessionImpl::alreadyClosed);
-
-    static final ScopedMemoryAccess.ScopedAccessError WRONG_THREAD = new ScopedMemoryAccess.ScopedAccessError(MemorySessionImpl::wrongThread);
 }
