@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1998, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1998, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -28,7 +28,6 @@ package jdk.javadoc.internal.doclets.formats.html;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.SortedSet;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.lang.model.element.Element;
@@ -47,7 +46,7 @@ import jdk.javadoc.internal.doclets.formats.html.markup.TagName;
 import jdk.javadoc.internal.doclets.formats.html.markup.HtmlTree;
 import jdk.javadoc.internal.doclets.formats.html.Navigation.PageMode;
 import jdk.javadoc.internal.doclets.formats.html.markup.Text;
-import jdk.javadoc.internal.doclets.toolkit.Content;
+import jdk.javadoc.internal.doclets.toolkit.DocletException;
 import jdk.javadoc.internal.doclets.toolkit.util.DocFileIOException;
 import jdk.javadoc.internal.doclets.toolkit.util.DocPath;
 import jdk.javadoc.internal.doclets.toolkit.util.DocPaths;
@@ -65,6 +64,8 @@ public class IndexWriter extends HtmlDocletWriter {
 
     protected final IndexBuilder mainIndex;
     protected final boolean splitIndex;
+    protected final List<Character> allFirstCharacters;
+    protected final List<Character> displayFirstCharacters;
 
     /**
      * Generates the main index of all documented elements, terms defined in some documentation
@@ -74,22 +75,21 @@ public class IndexWriter extends HtmlDocletWriter {
      * initial letter; otherwise, a single page is generated for all items in the index.
      *
      * @param configuration the configuration
-     * @throws DocFileIOException if an error occurs while writing the files
+     * @throws DocletException if an error occurs while writing the files
      */
-    public static void generate(HtmlConfiguration configuration) throws DocFileIOException {
-        IndexBuilder mainIndex = configuration.mainIndex;
+    public static void generate(HtmlConfiguration configuration) throws DocletException {
+        var writerFactory = configuration.getWriterFactory();
+        IndexBuilder mainIndex = configuration.indexBuilder;
         List<Character> firstCharacters = mainIndex.getFirstCharacters();
         if (configuration.getOptions().splitIndex()) {
             ListIterator<Character> iter = firstCharacters.listIterator();
             while (iter.hasNext()) {
                 Character ch = iter.next();
                 DocPath file = DocPaths.INDEX_FILES.resolve(DocPaths.indexN(iter.nextIndex()));
-                IndexWriter writer = new IndexWriter(configuration, file);
-                writer.generateIndexFile(firstCharacters, List.of(ch));
+                writerFactory.newIndexWriter(file, firstCharacters, List.of(ch)).buildPage();
             }
         } else {
-            IndexWriter writer = new IndexWriter(configuration, DocPaths.INDEX_ALL);
-            writer.generateIndexFile(firstCharacters, firstCharacters);
+            writerFactory.newIndexWriter(DocPaths.INDEX_ALL, firstCharacters, firstCharacters).buildPage();
         }
     }
 
@@ -98,22 +98,25 @@ public class IndexWriter extends HtmlDocletWriter {
      *
      * @param configuration  the current configuration
      * @param path           the file to be generated
+     * @param allFirstCharacters     the initial characters of all index items
+     * @param displayFirstCharacters the initial characters of the index items to appear on this page
      */
-    protected IndexWriter(HtmlConfiguration configuration, DocPath path) {
+    protected IndexWriter(HtmlConfiguration configuration, DocPath path,
+                          List<Character> allFirstCharacters, List<Character> displayFirstCharacters) {
         super(configuration, path);
-        this.mainIndex = configuration.mainIndex;
+        this.mainIndex = configuration.indexBuilder;
         this.splitIndex = configuration.getOptions().splitIndex();
+        this.allFirstCharacters = allFirstCharacters;
+        this.displayFirstCharacters = displayFirstCharacters;
     }
 
     /**
      * Generates a page containing some or all of the overall index.
      *
-     * @param allFirstCharacters     the initial characters of all index items
-     * @param displayFirstCharacters the initial characters of the index items to appear on this page
      * @throws DocFileIOException if an error occurs while writing the page
      */
-    protected void generateIndexFile(List<Character> allFirstCharacters,
-                                     List<Character> displayFirstCharacters) throws DocFileIOException {
+    @Override
+    public void buildPage() throws DocFileIOException {
         String title = splitIndex
                 ? resources.getText("doclet.Window_Split_Index", displayFirstCharacters.get(0))
                 : resources.getText("doclet.Window_Single_Index");
@@ -191,43 +194,35 @@ public class IndexWriter extends HtmlDocletWriter {
         Element element = item.getElement();
         String label = item.getLabel();
         switch (element.getKind()) {
-            case MODULE:
+            case MODULE -> {
                 dt = HtmlTree.DT(getModuleLink((ModuleElement) element, Text.of(label)));
                 dt.add(" - ").add(contents.module_).add(" " + label);
-                break;
+            }
 
-            case PACKAGE:
+            case PACKAGE -> {
                 dt = HtmlTree.DT(getPackageLink((PackageElement) element, Text.of(label)));
                 if (configuration.showModules) {
                     item.setContainingModule(utils.getFullyQualifiedName(utils.containingModule(element)));
                 }
                 dt.add(" - ").add(contents.package_).add(" " + label);
-                break;
+            }
 
-            case CLASS:
-            case ENUM:
-            case RECORD:
-            case ANNOTATION_TYPE:
-            case INTERFACE:
+            case CLASS, ENUM, RECORD, ANNOTATION_TYPE, INTERFACE -> {
                 dt = HtmlTree.DT(getLink(new HtmlLinkInfo(configuration,
-                        HtmlLinkInfo.Kind.INDEX, (TypeElement) element).style(HtmlStyle.typeNameLink)));
+                        HtmlLinkInfo.Kind.SHOW_TYPE_PARAMS_IN_LABEL, (TypeElement) element).style(HtmlStyle.typeNameLink)));
                 dt.add(" - ");
                 addClassInfo((TypeElement) element, dt);
-                break;
+            }
 
-            case CONSTRUCTOR:
-            case METHOD:
-            case FIELD:
-            case ENUM_CONSTANT:
+            case CONSTRUCTOR, METHOD, FIELD, ENUM_CONSTANT -> {
                 TypeElement containingType = item.getContainingTypeElement();
-                dt = HtmlTree.DT(getDocLink(HtmlLinkInfo.Kind.INDEX, containingType, element,
-                                label, HtmlStyle.memberNameLink));
+                dt = HtmlTree.DT(getDocLink(HtmlLinkInfo.Kind.PLAIN, containingType, element,
+                        label, HtmlStyle.memberNameLink));
                 dt.add(" - ");
                 addMemberDesc(element, containingType, dt);
-                break;
+            }
 
-            default:
-                throw new Error();
+            default -> throw new Error();
         }
         target.add(dt);
         var dd = new HtmlTree(TagName.DD);
@@ -290,9 +285,9 @@ public class IndexWriter extends HtmlDocletWriter {
         var div = HtmlTree.DIV(HtmlStyle.deprecationBlock);
         if (utils.isDeprecated(element)) {
             div.add(span);
-            List<? extends DeprecatedTree> tags = utils.getDeprecatedTrees(element);
+            var tags = utils.getDeprecatedTrees(element);
             if (!tags.isEmpty())
-                addInlineDeprecatedComment(element, tags.get(0), div);
+                addInlineDeprecatedComment(element, tags.getFirst(), div);
             content.add(div);
         } else {
             TypeElement encl = utils.getEnclosingTypeElement(element);
@@ -332,7 +327,7 @@ public class IndexWriter extends HtmlDocletWriter {
             default -> throw new IllegalArgumentException(member.getKind().toString());
         };
         content.add(contents.getContent(resource, kindName)).add(" ");
-        addPreQualifiedClassLink(HtmlLinkInfo.Kind.INDEX, enclosing,
+        addPreQualifiedClassLink(HtmlLinkInfo.Kind.PLAIN, enclosing,
                 null, content);
     }
 
@@ -355,7 +350,7 @@ public class IndexWriter extends HtmlDocletWriter {
         }
 
         content.add(new HtmlTree(TagName.BR));
-        List<Content> pageLinks = Stream.of(IndexItem.Category.values())
+        var pageLinks = Stream.of(IndexItem.Category.values())
                 .flatMap(c -> mainIndex.getItems(c).stream())
                 .filter(i -> !(i.isElementItem() || i.isTagItem()))
                 .sorted((i1,i2)-> utils.compareStrings(i1.getLabel(), i2.getLabel()))
