@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,21 +23,20 @@
 
 /*
  * @test id=default
- * @bug 8284161 8286788
+ * @bug 8284161 8286788 8321270
  * @summary Test Thread API with virtual threads
- * @enablePreview
  * @modules java.base/java.lang:+open
  * @library /test/lib
- * @run testng ThreadAPI
+ * @run junit/othervm --enable-native-access=ALL-UNNAMED ThreadAPI
  */
 
 /*
  * @test id=no-vmcontinuations
  * @requires vm.continuations
- * @enablePreview
  * @modules java.base/java.lang:+open
  * @library /test/lib
- * @run testng/othervm -XX:+UnlockExperimentalVMOptions -XX:-VMContinuations ThreadAPI
+ * @run junit/othervm -XX:+UnlockExperimentalVMOptions -XX:-VMContinuations
+ *     --enable-native-access=ALL-UNNAMED ThreadAPI
  */
 
 import java.time.Duration;
@@ -63,31 +62,29 @@ import java.util.stream.Stream;
 import java.nio.channels.Selector;
 
 import jdk.test.lib.thread.VThreadRunner;
-import org.testng.SkipException;
-import org.testng.annotations.AfterClass;
-import org.testng.annotations.BeforeClass;
-import org.testng.annotations.DataProvider;
-import org.testng.annotations.Test;
-import static org.testng.Assert.*;
+import jdk.test.lib.thread.VThreadPinner;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assumptions.*;
 
-public class ThreadAPI {
+class ThreadAPI {
     private static final Object lock = new Object();
 
     // used for scheduling thread interrupt
-    private ScheduledExecutorService scheduler;
+    private static ScheduledExecutorService scheduler;
 
-    @BeforeClass
-    public void setUp() throws Exception {
-        ThreadFactory factory = (task) -> {
-            Thread thread = new Thread(task);
-            thread.setDaemon(true);
-            return thread;
-        };
+    @BeforeAll
+    static void setup() throws Exception {
+        ThreadFactory factory = Executors.defaultThreadFactory();
         scheduler = Executors.newSingleThreadScheduledExecutor(factory);
     }
 
-    @AfterClass
-    public void tearDown() {
+    @AfterAll
+    static void finish() {
         scheduler.shutdown();
     }
 
@@ -103,7 +100,7 @@ public class ThreadAPI {
      * Test Thread.currentThread before/after park.
      */
     @Test
-    public void testCurrentThread1() throws Exception {
+    void testCurrentThread1() throws Exception {
         var before = new AtomicReference<Thread>();
         var after = new AtomicReference<Thread>();
         var thread = Thread.ofVirtual().start(() -> {
@@ -111,7 +108,7 @@ public class ThreadAPI {
             LockSupport.park();
             after.set(Thread.currentThread());
         });
-        awaitParked(thread);
+        await(thread, Thread.State.WAITING);
         LockSupport.unpark(thread);
         thread.join();
         assertTrue(before.get() == thread);
@@ -122,7 +119,7 @@ public class ThreadAPI {
      * Test Thread.currentThread before/after entering synchronized block.
      */
     @Test
-    public void testCurrentThread2() throws Exception {
+    void testCurrentThread2() throws Exception {
         var ref1 = new AtomicReference<Thread>();
         var ref2 = new AtomicReference<Thread>();
         var ref3 = new AtomicReference<Thread>();
@@ -135,7 +132,7 @@ public class ThreadAPI {
         });
         synchronized (lock) {
             thread.start();
-            awaitBlocked(thread);
+            await(thread, Thread.State.BLOCKED);
         }
         thread.join();
         assertTrue(ref1.get() == thread);
@@ -147,7 +144,7 @@ public class ThreadAPI {
      * Test Thread.currentThread before/after acquiring lock.
      */
     @Test
-    public void testCurrentThread3() throws Exception {
+    void testCurrentThread3() throws Exception {
         var ref1 = new AtomicReference<Thread>();
         var ref2 = new AtomicReference<Thread>();
         var ref3 = new AtomicReference<Thread>();
@@ -165,7 +162,7 @@ public class ThreadAPI {
         lock.lock();
         try {
             thread.start();
-            awaitParked(thread);
+            await(thread, Thread.State.WAITING);
         } finally {
             lock.unlock();
         }
@@ -179,7 +176,7 @@ public class ThreadAPI {
      * Test Thread::run.
      */
     @Test
-    public void testRun1() throws Exception {
+    void testRun1() throws Exception {
         var ref = new AtomicBoolean();
         var thread = Thread.ofVirtual().unstarted(() -> ref.set(true));
         thread.run();
@@ -190,7 +187,7 @@ public class ThreadAPI {
      * Test Thread::start.
      */
     @Test
-    public void testStart1() throws Exception {
+    void testStart1() throws Exception {
         var ref = new AtomicBoolean();
         var thread = Thread.ofVirtual().unstarted(() -> ref.set(true));
         assertFalse(ref.get());
@@ -203,7 +200,7 @@ public class ThreadAPI {
      * Test Thread::start, thread already started.
      */
     @Test
-    public void testStart2() throws Exception {
+    void testStart2() throws Exception {
         var thread = Thread.ofVirtual().start(LockSupport::park);
         try {
             assertThrows(IllegalThreadStateException.class, thread::start);
@@ -217,7 +214,7 @@ public class ThreadAPI {
      * Test Thread::start, thread already terminated.
      */
     @Test
-    public void testStart3() throws Exception {
+    void testStart3() throws Exception {
         var thread = Thread.ofVirtual().start(() -> { });
         thread.join();
         assertThrows(IllegalThreadStateException.class, thread::start);
@@ -227,7 +224,7 @@ public class ThreadAPI {
      * Test Thread.startVirtualThread.
      */
     @Test
-    public void testStartVirtualThread() throws Exception {
+    void testStartVirtualThread() throws Exception {
         var ref = new AtomicReference<Thread>();
         Thread vthread = Thread.startVirtualThread(() -> {
             ref.set(Thread.currentThread());
@@ -253,7 +250,7 @@ public class ThreadAPI {
      * Test Thread::stop from current thread.
      */
     @Test
-    public void testStop1() throws Exception {
+    void testStop1() throws Exception {
         VThreadRunner.run(() -> {
             Thread t = Thread.currentThread();
             assertThrows(UnsupportedOperationException.class, t::stop);
@@ -264,7 +261,7 @@ public class ThreadAPI {
      * Test Thread::stop from another thread.
      */
     @Test
-    public void testStop2() throws Exception {
+    void testStop2() throws Exception {
         var thread = Thread.ofVirtual().start(() -> {
             try {
                 Thread.sleep(20*1000);
@@ -279,68 +276,10 @@ public class ThreadAPI {
     }
 
     /**
-     * Test Thread::suspend from current thread.
-     */
-    @Test
-    public void testSuspend1() throws Exception {
-        VThreadRunner.run(() -> {
-            Thread t = Thread.currentThread();
-            assertThrows(UnsupportedOperationException.class, t::suspend);
-        });
-    }
-
-    /**
-     * Test Thread::suspend from another thread.
-     */
-    @Test
-    public void testSuspend2() throws Exception {
-        var thread = Thread.ofVirtual().start(() -> {
-            try {
-                Thread.sleep(20*1000);
-            } catch (InterruptedException e) { }
-        });
-        try {
-            assertThrows(UnsupportedOperationException.class, () -> thread.suspend());
-        } finally {
-            thread.interrupt();
-            thread.join();
-        }
-    }
-
-    /**
-     * Test Thread::resume from current thread.
-     */
-    @Test
-    public void testResume1() throws Exception {
-        VThreadRunner.run(() -> {
-            Thread t = Thread.currentThread();
-            assertThrows(UnsupportedOperationException.class, t::resume);
-        });
-    }
-
-    /**
-     * Test Thread::resume from another thread.
-     */
-    @Test
-    public void testResume2() throws Exception {
-        var thread = Thread.ofVirtual().start(() -> {
-            try {
-                Thread.sleep(20*1000);
-            } catch (InterruptedException e) { }
-        });
-        try {
-            assertThrows(UnsupportedOperationException.class, () -> thread.resume());
-        } finally {
-            thread.interrupt();
-            thread.join();
-        }
-    }
-
-    /**
      * Test Thread.join before thread starts, platform thread invokes join.
      */
     @Test
-    public void testJoin1() throws Exception {
+    void testJoin1() throws Exception {
         var thread = Thread.ofVirtual().unstarted(() -> { });
 
         thread.join();
@@ -360,7 +299,7 @@ public class ThreadAPI {
      * Test Thread.join before thread starts, virtual thread invokes join.
      */
     @Test
-    public void testJoin2() throws Exception {
+    void testJoin2() throws Exception {
         VThreadRunner.run(this::testJoin1);
     }
 
@@ -368,7 +307,7 @@ public class ThreadAPI {
      * Test Thread.join where thread does not terminate, platform thread invokes join.
      */
     @Test
-    public void testJoin3() throws Exception {
+    void testJoin3() throws Exception {
         var thread = Thread.ofVirtual().start(LockSupport::park);
         try {
             thread.join(20);
@@ -389,7 +328,7 @@ public class ThreadAPI {
      * Test Thread.join where thread does not terminate, virtual thread invokes join.
      */
     @Test
-    public void testJoin4() throws Exception {
+    void testJoin4() throws Exception {
         VThreadRunner.run(this::testJoin3);
     }
 
@@ -397,7 +336,7 @@ public class ThreadAPI {
      * Test Thread.join where thread terminates, platform thread invokes join.
      */
     @Test
-    public void testJoin5() throws Exception {
+    void testJoin5() throws Exception {
         var thread = Thread.ofVirtual().start(() -> {
             try {
                 Thread.sleep(50);
@@ -411,7 +350,7 @@ public class ThreadAPI {
      * Test Thread.join where thread terminates, virtual thread invokes join.
      */
     @Test
-    public void testJoin6() throws Exception {
+    void testJoin6() throws Exception {
         VThreadRunner.run(this::testJoin5);
     }
 
@@ -419,7 +358,7 @@ public class ThreadAPI {
      * Test Thread.join where thread terminates, platform thread invokes timed-join.
      */
     @Test
-    public void testJoin7() throws Exception {
+    void testJoin7() throws Exception {
         var thread = Thread.ofVirtual().start(() -> {
             try {
                 Thread.sleep(50);
@@ -433,7 +372,7 @@ public class ThreadAPI {
      * Test Thread.join where thread terminates, virtual thread invokes timed-join.
      */
     @Test
-    public void testJoin8() throws Exception {
+    void testJoin8() throws Exception {
         VThreadRunner.run(this::testJoin7);
     }
 
@@ -441,7 +380,7 @@ public class ThreadAPI {
      * Test Thread.join where thread terminates, platform thread invokes timed-join.
      */
     @Test
-    public void testJoin11() throws Exception {
+    void testJoin11() throws Exception {
         var thread = Thread.ofVirtual().start(() -> {
             try {
                 Thread.sleep(50);
@@ -455,7 +394,7 @@ public class ThreadAPI {
      * Test Thread.join where thread terminates, virtual thread invokes timed-join.
      */
     @Test
-    public void testJoin12() throws Exception {
+    void testJoin12() throws Exception {
         VThreadRunner.run(this::testJoin11);
     }
 
@@ -463,7 +402,7 @@ public class ThreadAPI {
      * Test Thread.join where thread already terminated, platform thread invokes join.
      */
     @Test
-    public void testJoin13() throws Exception {
+    void testJoin13() throws Exception {
         var thread = Thread.ofVirtual().start(() -> { });
         while (thread.isAlive()) {
             Thread.sleep(10);
@@ -482,7 +421,7 @@ public class ThreadAPI {
      * Test Thread.join where thread already terminated, virtual thread invokes join.
      */
     @Test
-    public void testJoin14() throws Exception {
+    void testJoin14() throws Exception {
         VThreadRunner.run(this::testJoin13);
     }
 
@@ -490,7 +429,7 @@ public class ThreadAPI {
      * Test platform thread invoking Thread.join with interrupt status set.
      */
     @Test
-    public void testJoin15() throws Exception {
+    void testJoin15() throws Exception {
         var thread = Thread.ofVirtual().start(LockSupport::park);
         Thread.currentThread().interrupt();
         try {
@@ -506,7 +445,7 @@ public class ThreadAPI {
      * Test virtual thread invoking Thread.join with interrupt status set.
      */
     @Test
-    public void testJoin16() throws Exception {
+    void testJoin16() throws Exception {
         VThreadRunner.run(this::testJoin15);
     }
 
@@ -514,7 +453,7 @@ public class ThreadAPI {
      * Test platform thread invoking timed-Thread.join with interrupt status set.
      */
     @Test
-    public void testJoin17() throws Exception {
+    void testJoin17() throws Exception {
         var thread = Thread.ofVirtual().start(LockSupport::park);
         Thread.currentThread().interrupt();
         try {
@@ -530,7 +469,7 @@ public class ThreadAPI {
      * Test virtual thread invoking timed-Thread.join with interrupt status set.
      */
     @Test
-    public void testJoin18() throws Exception {
+    void testJoin18() throws Exception {
         VThreadRunner.run(this::testJoin17);
     }
 
@@ -538,7 +477,7 @@ public class ThreadAPI {
      * Test platform thread invoking timed-Thread.join with interrupt status set.
      */
     @Test
-    public void testJoin19() throws Exception {
+    void testJoin19() throws Exception {
         var thread = Thread.ofVirtual().start(LockSupport::park);
         Thread.currentThread().interrupt();
         try {
@@ -555,7 +494,7 @@ public class ThreadAPI {
      * Test virtual thread invoking timed-Thread.join with interrupt status set.
      */
     @Test
-    public void testJoin20() throws Exception {
+    void testJoin20() throws Exception {
         VThreadRunner.run(this::testJoin19);
     }
 
@@ -563,7 +502,7 @@ public class ThreadAPI {
      * Test interrupt of platform thread blocked in Thread.join.
      */
     @Test
-    public void testJoin21() throws Exception {
+    void testJoin21() throws Exception {
         var thread = Thread.ofVirtual().start(LockSupport::park);
         scheduleInterrupt(Thread.currentThread(), 100);
         try {
@@ -579,7 +518,7 @@ public class ThreadAPI {
      * Test interrupt of virtual thread blocked in Thread.join.
      */
     @Test
-    public void testJoin22() throws Exception {
+    void testJoin22() throws Exception {
         VThreadRunner.run(this::testJoin17);
     }
 
@@ -587,7 +526,7 @@ public class ThreadAPI {
      * Test interrupt of platform thread blocked in timed-Thread.join.
      */
     @Test
-    public void testJoin23() throws Exception {
+    void testJoin23() throws Exception {
         var thread = Thread.ofVirtual().start(LockSupport::park);
         scheduleInterrupt(Thread.currentThread(), 100);
         try {
@@ -603,7 +542,7 @@ public class ThreadAPI {
      * Test interrupt of virtual thread blocked in Thread.join.
      */
     @Test
-    public void testJoin24() throws Exception {
+    void testJoin24() throws Exception {
         VThreadRunner.run(this::testJoin23);
     }
 
@@ -611,7 +550,7 @@ public class ThreadAPI {
      * Test interrupt of platform thread blocked in Thread.join.
      */
     @Test
-    public void testJoin25() throws Exception {
+    void testJoin25() throws Exception {
         var thread = Thread.ofVirtual().start(LockSupport::park);
         scheduleInterrupt(Thread.currentThread(), 100);
         try {
@@ -628,7 +567,7 @@ public class ThreadAPI {
      * Test interrupt of virtual thread blocked in Thread.join.
      */
     @Test
-    public void testJoin26() throws Exception {
+    void testJoin26() throws Exception {
         VThreadRunner.run(this::testJoin25);
     }
 
@@ -636,7 +575,7 @@ public class ThreadAPI {
      * Test virtual thread calling Thread.join to wait for platform thread to terminate.
      */
     @Test
-    public void testJoin27() throws Exception {
+    void testJoin27() throws Exception {
         AtomicBoolean done = new AtomicBoolean();
         VThreadRunner.run(() -> {
             var thread = new Thread(() -> {
@@ -661,7 +600,7 @@ public class ThreadAPI {
      * Test virtual thread calling Thread.join to wait for platform thread to terminate.
      */
     @Test
-    public void testJoin28() throws Exception {
+    void testJoin28() throws Exception {
         long nanos = TimeUnit.NANOSECONDS.convert(100, TimeUnit.MILLISECONDS);
         VThreadRunner.run(() -> {
             var thread = new Thread(() -> LockSupport.parkNanos(nanos));
@@ -681,7 +620,7 @@ public class ThreadAPI {
      * for platform thread to terminate.
      */
     @Test
-    public void testJoin29() throws Exception {
+    void testJoin29() throws Exception {
         VThreadRunner.run(() -> {
             var thread = new Thread(LockSupport::park);
             thread.start();
@@ -703,7 +642,7 @@ public class ThreadAPI {
      * platform thread to terminate.
      */
     @Test
-    public void testJoin30() throws Exception {
+    void testJoin30() throws Exception {
         VThreadRunner.run(() -> {
             AtomicBoolean done = new AtomicBoolean();
             var thread = new Thread(() -> {
@@ -731,7 +670,7 @@ public class ThreadAPI {
      * and unparking.
      */
     @Test
-    public void testJoin31() throws Exception {
+    void testJoin31() throws Exception {
         Thread thread = Thread.ofVirtual().start(() -> {
             synchronized (lock) {
                 for (int i = 0; i < 10; i++) {
@@ -748,7 +687,7 @@ public class ThreadAPI {
      * and unparking.
      */
     @Test
-    public void testJoin32() throws Exception {
+    void testJoin32() throws Exception {
         VThreadRunner.run(this::testJoin31);
     }
 
@@ -757,19 +696,20 @@ public class ThreadAPI {
      * and unparking while pinned.
      */
     @Test
-    public void testJoin33() throws Exception {
+    void testJoin33() throws Exception {
         AtomicBoolean done = new AtomicBoolean();
         Thread thread = Thread.ofVirtual().start(() -> {
-            synchronized (lock) {
+            VThreadPinner.runPinned(() -> {
                 while (!done.get()) {
                     LockSupport.parkNanos(Duration.ofMillis(20).toNanos());
                 }
-            }
+            });
         });
         try {
             assertFalse(thread.join(Duration.ofMillis(100)));
         } finally {
             done.set(true);
+            thread.join();
         }
     }
 
@@ -778,7 +718,7 @@ public class ThreadAPI {
      * and unparking while pinned.
      */
     @Test
-    public void testJoin34() throws Exception {
+    void testJoin34() throws Exception {
         // need at least two carrier threads due to pinning
         int previousParallelism = VThreadRunner.ensureParallelism(2);
         try {
@@ -793,7 +733,7 @@ public class ThreadAPI {
      * Test Thread.join(null).
      */
     @Test
-    public void testJoin35() throws Exception {
+    void testJoin35() throws Exception {
         var thread = Thread.ofVirtual().unstarted(LockSupport::park);
 
         // unstarted
@@ -816,7 +756,7 @@ public class ThreadAPI {
      * Test Thread.interrupt on current thread.
      */
     @Test
-    public void testInterrupt1() throws Exception {
+    void testInterrupt1() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             assertFalse(me.isInterrupted());
@@ -832,7 +772,7 @@ public class ThreadAPI {
      * Test Thread.interrupt before thread started.
      */
     @Test
-    public void testInterrupt2() throws Exception {
+    void testInterrupt2() throws Exception {
         var thread = Thread.ofVirtual().unstarted(() -> { });
         thread.interrupt();
         assertTrue(thread.isInterrupted());
@@ -842,7 +782,7 @@ public class ThreadAPI {
      * Test Thread.interrupt after thread started.
      */
     @Test
-    public void testInterrupt3() throws Exception {
+    void testInterrupt3() throws Exception {
         var thread = Thread.ofVirtual().start(() -> { });
         thread.join();
         thread.interrupt();
@@ -853,7 +793,7 @@ public class ThreadAPI {
      * Test termination with interrupt status set.
      */
     @Test
-    public void testInterrupt4() throws Exception {
+    void testInterrupt4() throws Exception {
         var thread = Thread.ofVirtual().start(() -> {
             Thread.currentThread().interrupt();
         });
@@ -865,7 +805,7 @@ public class ThreadAPI {
      * Test Thread.interrupt of thread blocked in Selector.select.
      */
     @Test
-    public void testInterrupt5() throws Exception {
+    void testInterrupt5() throws Exception {
         var exception = new AtomicReference<Exception>();
         var thread = Thread.ofVirtual().start(() -> {
             try {
@@ -880,14 +820,14 @@ public class ThreadAPI {
         Thread.sleep(100);  // give time for thread to block
         thread.interrupt();
         thread.join();
-        assertTrue(exception.get() == null);
+        assertNull(exception.get());
     }
 
     /**
      * Test Thread.interrupt of thread parked in sleep.
      */
     @Test
-    public void testInterrupt6() throws Exception {
+    void testInterrupt6() throws Exception {
         var exception = new AtomicReference<Exception>();
         var thread = Thread.ofVirtual().start(() -> {
             try {
@@ -902,17 +842,17 @@ public class ThreadAPI {
                 exception.set(e);
             }
         });
-        awaitParked(thread);
+        await(thread, Thread.State.TIMED_WAITING);
         thread.interrupt();
         thread.join();
-        assertTrue(exception.get() == null);
+        assertNull(exception.get());
     }
 
     /**
      * Test Thread.interrupt of parked thread.
      */
     @Test
-    public void testInterrupt7() throws Exception {
+    void testInterrupt7() throws Exception {
         var exception = new AtomicReference<Exception>();
         var thread = Thread.ofVirtual().start(() -> {
             try {
@@ -922,17 +862,17 @@ public class ThreadAPI {
                 exception.set(e);
             }
         });
-        awaitParked(thread);
+        await(thread, Thread.State.WAITING);
         thread.interrupt();
         thread.join();
-        assertTrue(exception.get() == null);
+        assertNull(exception.get());
     }
 
     /**
      * Test trying to park with interrupt status set.
      */
     @Test
-    public void testInterrupt8() throws Exception {
+    void testInterrupt8() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             me.interrupt();
@@ -945,7 +885,7 @@ public class ThreadAPI {
      * Test trying to wait with interrupt status set.
      */
     @Test
-    public void testInterrupt9() throws Exception {
+    void testInterrupt9() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             me.interrupt();
@@ -964,7 +904,7 @@ public class ThreadAPI {
      * Test trying to block with interrupt status set.
      */
     @Test
-    public void testInterrupt10() throws Exception {
+    void testInterrupt10() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             me.interrupt();
@@ -979,12 +919,12 @@ public class ThreadAPI {
      * Test Thread.getName and setName from current thread, started without name.
      */
     @Test
-    public void testSetName1() throws Exception {
+    void testSetName1() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             assertTrue(me.getName().isEmpty());
             me.setName("fred");
-            assertEquals(me.getName(), "fred");
+            assertEquals("fred", me.getName());
         });
     }
 
@@ -992,12 +932,12 @@ public class ThreadAPI {
      * Test Thread.getName and setName from current thread, started with name.
      */
     @Test
-    public void testSetName2() throws Exception {
+    void testSetName2() throws Exception {
         VThreadRunner.run("fred", () -> {
             Thread me = Thread.currentThread();
-            assertEquals(me.getName(), "fred");
+            assertEquals("fred", me.getName());
             me.setName("joe");
-            assertEquals(me.getName(), "joe");
+            assertEquals("joe", me.getName());
         });
     }
 
@@ -1005,48 +945,48 @@ public class ThreadAPI {
      * Test Thread.getName and setName from another thread.
      */
     @Test
-    public void testSetName3() throws Exception {
+    void testSetName3() throws Exception {
         var thread = Thread.ofVirtual().unstarted(LockSupport::park);
         assertTrue(thread.getName().isEmpty());
 
         // not started
         thread.setName("fred1");
-        assertEquals(thread.getName(), "fred1");
+        assertEquals("fred1", thread.getName());
 
         // started
         thread.start();
         try {
-            assertEquals(thread.getName(), "fred1");
+            assertEquals("fred1", thread.getName());
             thread.setName("fred2");
-            assertEquals(thread.getName(), "fred2");
+            assertEquals("fred2", thread.getName());
         } finally {
             LockSupport.unpark(thread);
             thread.join();
         }
 
         // terminated
-        assertEquals(thread.getName(), "fred2");
+        assertEquals("fred2", thread.getName());
         thread.setName("fred3");
-        assertEquals(thread.getName(), "fred3");
+        assertEquals("fred3", thread.getName());
     }
 
     /**
      * Test Thread.getPriority and setPriority from current thread.
      */
     @Test
-    public void testSetPriority1() throws Exception {
+    void testSetPriority1() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
-            assertTrue(me.getPriority() == Thread.NORM_PRIORITY);
+            assertEquals(Thread.NORM_PRIORITY, me.getPriority());
 
             me.setPriority(Thread.MAX_PRIORITY);
-            assertTrue(me.getPriority() == Thread.NORM_PRIORITY);
+            assertEquals(Thread.NORM_PRIORITY, me.getPriority());
 
             me.setPriority(Thread.NORM_PRIORITY);
-            assertTrue(me.getPriority() == Thread.NORM_PRIORITY);
+            assertEquals(Thread.NORM_PRIORITY, me.getPriority());
 
             me.setPriority(Thread.MIN_PRIORITY);
-            assertTrue(me.getPriority() == Thread.NORM_PRIORITY);
+            assertEquals(Thread.NORM_PRIORITY, me.getPriority());
 
             assertThrows(IllegalArgumentException.class, () -> me.setPriority(-1));
         });
@@ -1056,37 +996,37 @@ public class ThreadAPI {
      * Test Thread.getPriority and setPriority from another thread.
      */
     @Test
-    public void testSetPriority2() throws Exception {
+    void testSetPriority2() throws Exception {
         var thread = Thread.ofVirtual().unstarted(LockSupport::park);
 
         // not started
-        assertTrue(thread.getPriority() == Thread.NORM_PRIORITY);
+        assertEquals(Thread.NORM_PRIORITY, thread.getPriority());
 
         thread.setPriority(Thread.MAX_PRIORITY);
-        assertTrue(thread.getPriority() == Thread.NORM_PRIORITY);
+        assertEquals(Thread.NORM_PRIORITY, thread.getPriority());
 
         thread.setPriority(Thread.NORM_PRIORITY);
-        assertTrue(thread.getPriority() == Thread.NORM_PRIORITY);
+        assertEquals(Thread.NORM_PRIORITY, thread.getPriority());
 
         thread.setPriority(Thread.MIN_PRIORITY);
-        assertTrue(thread.getPriority() == Thread.NORM_PRIORITY);
+        assertEquals(Thread.NORM_PRIORITY, thread.getPriority());
 
         assertThrows(IllegalArgumentException.class, () -> thread.setPriority(-1));
 
         // running
         thread.start();
         try {
-            assertTrue(thread.getPriority() == Thread.NORM_PRIORITY);
+            assertEquals(Thread.NORM_PRIORITY, thread.getPriority());
             thread.setPriority(Thread.NORM_PRIORITY);
 
             thread.setPriority(Thread.MAX_PRIORITY);
-            assertTrue(thread.getPriority() == Thread.NORM_PRIORITY);
+            assertEquals(Thread.NORM_PRIORITY, thread.getPriority());
 
             thread.setPriority(Thread.NORM_PRIORITY);
-            assertTrue(thread.getPriority() == Thread.NORM_PRIORITY);
+            assertEquals(Thread.NORM_PRIORITY, thread.getPriority());
 
             thread.setPriority(Thread.MIN_PRIORITY);
-            assertTrue(thread.getPriority() == Thread.NORM_PRIORITY);
+            assertEquals(Thread.NORM_PRIORITY, thread.getPriority());
 
             assertThrows(IllegalArgumentException.class, () -> thread.setPriority(-1));
 
@@ -1096,14 +1036,14 @@ public class ThreadAPI {
         thread.join();
 
         // terminated
-        assertTrue(thread.getPriority() == Thread.NORM_PRIORITY);
+        assertEquals(Thread.NORM_PRIORITY, thread.getPriority());
     }
 
     /**
      * Test Thread.isDaemon and setDaemon from current thread.
      */
     @Test
-    public void testSetDaemon1() throws Exception {
+    void testSetDaemon1() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             assertTrue(me.isDaemon());
@@ -1116,7 +1056,7 @@ public class ThreadAPI {
      * Test Thread.isDaemon and setDaemon from another thread.
      */
     @Test
-    public void testSetDaemon2() throws Exception {
+    void testSetDaemon2() throws Exception {
         var thread = Thread.ofVirtual().unstarted(LockSupport::park);
 
         // not started
@@ -1140,12 +1080,11 @@ public class ThreadAPI {
     }
 
     /**
-     * Test Thread.yield releases thread when not pinned.
+     * Test Thread.yield releases carrier thread.
      */
     @Test
-    public void testYield1() throws Exception {
-        if (!ThreadBuilders.supportsCustomScheduler())
-            throw new SkipException("No support for custom schedulers");
+    void testYield1() throws Exception {
+        assumeTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
         var list = new CopyOnWriteArrayList<String>();
         try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
             Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
@@ -1165,16 +1104,15 @@ public class ThreadAPI {
             thread.start();
             thread.join();
         }
-        assertEquals(list, List.of("A", "B", "A", "B"));
+        assertEquals(List.of("A", "B", "A", "B"), list);
     }
 
     /**
-     * Test Thread.yield when thread is pinned.
+     * Test Thread.yield when thread is pinned by native frame.
      */
     @Test
-    public void testYield2() throws Exception {
-        if (!ThreadBuilders.supportsCustomScheduler())
-            throw new SkipException("No support for custom schedulers");
+    void testYield2() throws Exception {
+        assumeTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
         var list = new CopyOnWriteArrayList<String>();
         try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
             Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
@@ -1185,23 +1123,53 @@ public class ThreadAPI {
                     list.add("B");
                 });
                 child.start();
-                synchronized (lock) {
+                VThreadPinner.runPinned(() -> {
                     Thread.yield();   // pinned so will be a no-op
                     list.add("A");
-                }
+                });
                 try { child.join(); } catch (InterruptedException e) { }
             });
             thread.start();
             thread.join();
         }
-        assertEquals(list, List.of("A", "A", "B"));
+        assertEquals(List.of("A", "A", "B"), list);
+    }
+
+    /**
+     * Test Thread.yield does not consume the thread's parking permit.
+     */
+    @Test
+    void testYield3() throws Exception {
+        var thread = Thread.ofVirtual().start(() -> {
+            LockSupport.unpark(Thread.currentThread());
+            Thread.yield();
+            LockSupport.park();  // should not park
+        });
+        thread.join();
+    }
+
+    /**
+     * Test Thread.yield does not make available the thread's parking permit.
+     */
+    @Test
+    void testYield4() throws Exception {
+        var thread = Thread.ofVirtual().start(() -> {
+            Thread.yield();
+            LockSupport.park();  // should park
+        });
+        try {
+            await(thread, Thread.State.WAITING);
+        } finally {
+            LockSupport.unpark(thread);
+            thread.join();
+        }
     }
 
     /**
      * Test Thread.onSpinWait.
      */
     @Test
-    public void testOnSpinWait() throws Exception {
+    void testOnSpinWait() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             Thread.onSpinWait();
@@ -1213,7 +1181,7 @@ public class ThreadAPI {
      * Test Thread.sleep(-1).
      */
     @Test
-    public void testSleep1() throws Exception {
+    void testSleep1() throws Exception {
         VThreadRunner.run(() -> {
             assertThrows(IllegalArgumentException.class, () -> Thread.sleep(-1));
             assertThrows(IllegalArgumentException.class, () -> Thread.sleep(-1, 0));
@@ -1227,7 +1195,7 @@ public class ThreadAPI {
      * Test Thread.sleep(0).
      */
     @Test
-    public void testSleep2() throws Exception {
+    void testSleep2() throws Exception {
         VThreadRunner.run(() -> Thread.sleep(0));
         VThreadRunner.run(() -> Thread.sleep(0, 0));
         VThreadRunner.run(() -> Thread.sleep(Duration.ofMillis(0)));
@@ -1236,52 +1204,46 @@ public class ThreadAPI {
     /**
      * Tasks that sleep for 1 second.
      */
-    @DataProvider(name = "oneSecondSleepers")
-    public Object[][] oneSecondSleepers() {
-        ThrowingRunnable[] sleepers = {
+    static Stream<ThrowingRunnable> oneSecondSleepers() {
+        return Stream.of(
                 () -> Thread.sleep(1000),
                 () -> Thread.sleep(Duration.ofSeconds(1))
-        };
-        return Arrays.stream(sleepers)
-                .map(s -> new Object[] { s })
-                .toArray(Object[][]::new);
+        );
     }
 
     /**
      * Test Thread.sleep duration.
      */
-    @Test(dataProvider = "oneSecondSleepers")
-    public void testSleep3(ThrowingRunnable sleeper) throws Exception {
+    @ParameterizedTest
+    @MethodSource("oneSecondSleepers")
+    void testSleep3(ThrowingRunnable sleeper) throws Exception {
         VThreadRunner.run(() -> {
             long start = millisTime();
             sleeper.run();
-            expectDuration(start, /*min*/900, /*max*/4000);
+            expectDuration(start, /*min*/900, /*max*/20_000);
         });
     }
 
     /**
      * Tasks that sleep for zero or longer duration.
      */
-    @DataProvider(name = "sleepers")
-    public Object[][] sleepers() {
-        ThrowingRunnable[] sleepers = {
+    static Stream<ThrowingRunnable> sleepers() {
+        return Stream.of(
                 () -> Thread.sleep(0),
                 () -> Thread.sleep(0, 0),
                 () -> Thread.sleep(1000),
                 () -> Thread.sleep(1000, 0),
                 () -> Thread.sleep(Duration.ofMillis(0)),
-                () -> Thread.sleep(Duration.ofMillis(1000)),
-        };
-        return Arrays.stream(sleepers)
-                .map(s -> new Object[] { s })
-                .toArray(Object[][]::new);
+                () -> Thread.sleep(Duration.ofMillis(1000))
+        );
     }
 
     /**
      * Test Thread.sleep with interrupt status set.
      */
-    @Test(dataProvider = "sleepers")
-    public void testSleep4(ThrowingRunnable sleeper) throws Exception {
+    @ParameterizedTest
+    @MethodSource("sleepers")
+    void testSleep4(ThrowingRunnable sleeper) throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             me.interrupt();
@@ -1299,7 +1261,7 @@ public class ThreadAPI {
      * Test Thread.sleep with interrupt status set and a negative duration.
      */
     @Test
-    public void testSleep4() throws Exception {
+    void testSleep4() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             me.interrupt();
@@ -1311,23 +1273,20 @@ public class ThreadAPI {
     /**
      * Tasks that sleep for a long time.
      */
-    @DataProvider(name = "longSleepers")
-    public Object[][] longSleepers() {
-        ThrowingRunnable[] sleepers = {
+    static Stream<ThrowingRunnable> longSleepers() {
+        return Stream.of(
                 () -> Thread.sleep(20_000),
                 () -> Thread.sleep(20_000, 0),
-                () -> Thread.sleep(Duration.ofSeconds(20)),
-        };
-        return Arrays.stream(sleepers)
-                .map(s -> new Object[] { s })
-                .toArray(Object[][]::new);
+                () -> Thread.sleep(Duration.ofSeconds(20))
+        );
     }
 
     /**
      * Test interrupting Thread.sleep.
      */
-    @Test(dataProvider = "longSleepers")
-    public void testSleep5(ThrowingRunnable sleeper) throws Exception {
+    @ParameterizedTest
+    @MethodSource("longSleepers")
+    void testSleep5(ThrowingRunnable sleeper) throws Exception {
         VThreadRunner.run(() -> {
             Thread t = Thread.currentThread();
             scheduleInterrupt(t, 100);
@@ -1345,13 +1304,13 @@ public class ThreadAPI {
      * Test that Thread.sleep does not disrupt parking permit.
      */
     @Test
-    public void testSleep6() throws Exception {
+    void testSleep6() throws Exception {
         VThreadRunner.run(() -> {
             LockSupport.unpark(Thread.currentThread());
 
             long start = millisTime();
             Thread.sleep(1000);
-            expectDuration(start, /*min*/900, /*max*/4000);
+            expectDuration(start, /*min*/900, /*max*/20_000);
 
             // check that parking permit was not consumed
             LockSupport.park();
@@ -1362,13 +1321,13 @@ public class ThreadAPI {
      * Test that Thread.sleep is not disrupted by unparking thread.
      */
     @Test
-    public void testSleep7() throws Exception {
+    void testSleep7() throws Exception {
         AtomicReference<Exception> exc = new AtomicReference<>();
         var thread = Thread.ofVirtual().start(() -> {
             try {
                 long start = millisTime();
                 Thread.sleep(1000);
-                expectDuration(start, /*min*/900, /*max*/4000);
+                expectDuration(start, /*min*/900, /*max*/20_000);
             } catch (Exception e) {
                 exc.set(e);
             }
@@ -1390,13 +1349,11 @@ public class ThreadAPI {
      * Test Thread.sleep when pinned.
      */
     @Test
-    public void testSleep8() throws Exception {
-        VThreadRunner.run(() -> {
+    void testSleep8() throws Exception {
+        VThreadPinner.runPinned(() -> {
             long start = millisTime();
-            synchronized (lock) {
-                Thread.sleep(1000);
-            }
-            expectDuration(start, /*min*/900, /*max*/4000);
+            Thread.sleep(1000);
+            expectDuration(start, /*min*/900, /*max*/20_000);
         });
     }
 
@@ -1404,14 +1361,14 @@ public class ThreadAPI {
      * Test Thread.sleep when pinned and with interrupt status set.
      */
     @Test
-    public void testSleep9() throws Exception {
+    void testSleep9() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             me.interrupt();
             try {
-                synchronized (lock) {
+                VThreadPinner.runPinned(() -> {
                     Thread.sleep(2000);
-                }
+                });
                 fail("sleep not interrupted");
             } catch (InterruptedException e) {
                 // expected
@@ -1424,14 +1381,14 @@ public class ThreadAPI {
      * Test interrupting Thread.sleep when pinned.
      */
     @Test
-    public void testSleep10() throws Exception {
+    void testSleep10() throws Exception {
         VThreadRunner.run(() -> {
             Thread t = Thread.currentThread();
             scheduleInterrupt(t, 100);
             try {
-                synchronized (lock) {
+                VThreadPinner.runPinned(() -> {
                     Thread.sleep(20 * 1000);
-                }
+                });
                 fail("sleep not interrupted");
             } catch (InterruptedException e) {
                 // interrupt status should be cleared
@@ -1444,7 +1401,7 @@ public class ThreadAPI {
      * Test Thread.sleep(null).
      */
     @Test
-    public void testSleep11() throws Exception {
+    void testSleep11() throws Exception {
         assertThrows(NullPointerException.class, () -> Thread.sleep(null));
         VThreadRunner.run(() -> {
             assertThrows(NullPointerException.class, () -> Thread.sleep(null));
@@ -1478,7 +1435,7 @@ public class ThreadAPI {
      * Test Thread.xxxContextClassLoader from the current thread.
      */
     @Test
-    public void testContextClassLoader1() throws Exception {
+    void testContextClassLoader1() throws Exception {
         ClassLoader loader = new ClassLoader() { };
         VThreadRunner.run(() -> {
             Thread t = Thread.currentThread();
@@ -1491,7 +1448,7 @@ public class ThreadAPI {
      * Test inheriting initial value of TCCL from platform thread.
      */
     @Test
-    public void testContextClassLoader2() throws Exception {
+    void testContextClassLoader2() throws Exception {
         ClassLoader loader = new ClassLoader() { };
         Thread t = Thread.currentThread();
         ClassLoader savedLoader = t.getContextClassLoader();
@@ -1509,7 +1466,7 @@ public class ThreadAPI {
      * Test inheriting initial value of TCCL from virtual thread.
      */
     @Test
-    public void testContextClassLoader3() throws Exception {
+    void testContextClassLoader3() throws Exception {
         VThreadRunner.run(() -> {
             ClassLoader loader = new ClassLoader() { };
             Thread.currentThread().setContextClassLoader(loader);
@@ -1523,7 +1480,7 @@ public class ThreadAPI {
      * Test inheriting initial value of TCCL through an intermediate virtual thread.
      */
     @Test
-    public void testContextClassLoader4() throws Exception {
+    void testContextClassLoader4() throws Exception {
         ClassLoader loader = new ClassLoader() { };
         Thread t = Thread.currentThread();
         ClassLoader savedLoader = t.getContextClassLoader();
@@ -1540,27 +1497,11 @@ public class ThreadAPI {
     }
 
     /**
-     * Test Thread.xxxContextClassLoader when thread locals not supported.
-     */
-    @Test
-    public void testContextClassLoader5() throws Exception {
-        ClassLoader scl = ClassLoader.getSystemClassLoader();
-        ClassLoader loader = new ClassLoader() { };
-        VThreadRunner.run(VThreadRunner.NO_THREAD_LOCALS, () -> {
-            Thread t = Thread.currentThread();
-            assertTrue(t.getContextClassLoader() == scl);
-            assertThrows(UnsupportedOperationException.class,
-                         () -> t.setContextClassLoader(loader));
-            assertTrue(t.getContextClassLoader() == scl);
-        });
-    }
-
-    /**
      * Test Thread.xxxContextClassLoader when thread does not inherit the
      * initial value of inheritable thread locals.
      */
     @Test
-    public void testContextClassLoader6() throws Exception {
+    void testContextClassLoader5() throws Exception {
         VThreadRunner.run(() -> {
             ClassLoader loader = new ClassLoader() { };
             Thread.currentThread().setContextClassLoader(loader);
@@ -1578,10 +1519,9 @@ public class ThreadAPI {
      * Test Thread.setUncaughtExceptionHandler.
      */
     @Test
-    public void testUncaughtExceptionHandler1() throws Exception {
+    void testUncaughtExceptionHandler1() throws Exception {
         class FooException extends RuntimeException { }
-        var exception = new AtomicReference<Throwable>();
-        Thread.UncaughtExceptionHandler handler = (thread, exc) -> exception.set(exc);
+        var handler = new CapturingUHE();
         Thread thread = Thread.ofVirtual().start(() -> {
             Thread me = Thread.currentThread();
             assertTrue(me.getUncaughtExceptionHandler() == me.getThreadGroup());
@@ -1590,18 +1530,18 @@ public class ThreadAPI {
             throw new FooException();
         });
         thread.join();
-        assertTrue(exception.get() instanceof FooException);
-        assertTrue(thread.getUncaughtExceptionHandler() == null);
+        assertInstanceOf(FooException.class, handler.exception());
+        assertEquals(thread, handler.thread());
+        assertNull(thread.getUncaughtExceptionHandler());
     }
 
     /**
      * Test default UncaughtExceptionHandler.
      */
     @Test
-    public void testUncaughtExceptionHandler2() throws Exception {
+    void testUncaughtExceptionHandler2() throws Exception {
         class FooException extends RuntimeException { }
-        var exception = new AtomicReference<Throwable>();
-        Thread.UncaughtExceptionHandler handler = (thread, exc) -> exception.set(exc);
+        var handler = new CapturingUHE();
         Thread.UncaughtExceptionHandler savedHandler = Thread.getDefaultUncaughtExceptionHandler();
         Thread.setDefaultUncaughtExceptionHandler(handler);
         Thread thread;
@@ -1612,30 +1552,66 @@ public class ThreadAPI {
             });
             thread.join();
         } finally {
-            Thread.setDefaultUncaughtExceptionHandler(savedHandler);
+            Thread.setDefaultUncaughtExceptionHandler(savedHandler);  // restore
         }
-        assertTrue(exception.get() instanceof FooException);
-        assertTrue(thread.getUncaughtExceptionHandler() == null);
+        assertInstanceOf(FooException.class, handler.exception());
+        assertEquals(thread, handler.thread());
+        assertNull(thread.getUncaughtExceptionHandler());
     }
 
     /**
-     * Test no UncaughtExceptionHandler set.
+     * Test Thread and default UncaughtExceptionHandler set.
      */
     @Test
-    public void testUncaughtExceptionHandler3() throws Exception {
+    void testUncaughtExceptionHandler3() throws Exception {
         class FooException extends RuntimeException { }
-        Thread thread = Thread.ofVirtual().start(() -> {
-            throw new FooException();
-        });
-        thread.join();
-        assertTrue(thread.getUncaughtExceptionHandler() == null);
+        var defaultHandler = new CapturingUHE();
+        var threadHandler = new CapturingUHE();
+        Thread.UncaughtExceptionHandler savedHandler = Thread.getDefaultUncaughtExceptionHandler();
+        Thread.setDefaultUncaughtExceptionHandler(defaultHandler);
+        Thread thread;
+        try {
+            thread = Thread.ofVirtual().start(() -> {
+                Thread me = Thread.currentThread();
+                assertTrue(me.getUncaughtExceptionHandler() == me.getThreadGroup());
+                me.setUncaughtExceptionHandler(threadHandler);
+                assertTrue(me.getUncaughtExceptionHandler() == threadHandler);
+                throw new FooException();
+            });
+            thread.join();
+        } finally {
+            Thread.setDefaultUncaughtExceptionHandler(savedHandler);  // restore
+        }
+        assertInstanceOf(FooException.class, threadHandler.exception());
+        assertNull(defaultHandler.exception());
+        assertEquals(thread, threadHandler.thread());
+        assertNull(thread.getUncaughtExceptionHandler());
+    }
+
+    /**
+     * Test no Thread or default UncaughtExceptionHandler set.
+     */
+    @Test
+    void testUncaughtExceptionHandler4() throws Exception {
+        Thread.UncaughtExceptionHandler savedHandler = Thread.getDefaultUncaughtExceptionHandler();
+        Thread.setDefaultUncaughtExceptionHandler(null);
+        try {
+            class FooException extends RuntimeException { }
+            Thread thread = Thread.ofVirtual().start(() -> {
+                throw new FooException();
+            });
+            thread.join();
+            assertNull(thread.getUncaughtExceptionHandler());
+        } finally {
+            Thread.setDefaultUncaughtExceptionHandler(savedHandler);
+        }
     }
 
     /**
      * Test Thread::threadId and getId.
      */
     @Test
-    public void testThreadId1() throws Exception {
+    void testThreadId1() throws Exception {
         record ThreadIds(long threadId, long id) { }
         var ref = new AtomicReference<ThreadIds>();
 
@@ -1671,7 +1647,7 @@ public class ThreadAPI {
      * Test that each Thread has a unique ID
      */
     @Test
-    public void testThreadId2() throws Exception {
+    void testThreadId2() throws Exception {
         // thread ID should be unique
         long tid1 = Thread.ofVirtual().unstarted(() -> { }).threadId();
         long tid2 = Thread.ofVirtual().unstarted(() -> { }).threadId();
@@ -1682,54 +1658,79 @@ public class ThreadAPI {
     }
 
     /**
-     * Test Thread::getState when thread is not started.
+     * Test Thread::getState when thread is new/unstarted.
      */
     @Test
-    public void testGetState1() {
+    void testGetState1() {
         var thread = Thread.ofVirtual().unstarted(() -> { });
-        assertTrue(thread.getState() == Thread.State.NEW);
+        assertEquals(Thread.State.NEW, thread.getState());
+    }
+
+    /**
+     * Test Thread::getState when thread is terminated.
+     */
+    @Test
+    void testGetState2() throws Exception {
+        var thread = Thread.ofVirtual().start(() -> { });
+        thread.join();
+        assertEquals(Thread.State.TERMINATED, thread.getState());
     }
 
     /**
      * Test Thread::getState when thread is runnable (mounted).
      */
     @Test
-    public void testGetState2() throws Exception {
-        VThreadRunner.run(() -> {
-            Thread.State state = Thread.currentThread().getState();
-            assertTrue(state == Thread.State.RUNNABLE);
+    void testGetState3() throws Exception {
+        var started = new CountDownLatch(1);
+        var done = new AtomicBoolean();
+        var thread = Thread.ofVirtual().start(() -> {
+            started.countDown();
+
+            // spin until done
+            while (!done.get()) {
+                Thread.onSpinWait();
+            }
         });
+        try {
+            // wait for thread to start
+            started.await();
+
+            // thread should be runnable
+            assertEquals(Thread.State.RUNNABLE, thread.getState());
+        } finally {
+            done.set(true);
+            thread.join();
+        }
     }
 
     /**
      * Test Thread::getState when thread is runnable (not mounted).
      */
     @Test
-    public void testGetState3() throws Exception {
-        if (!ThreadBuilders.supportsCustomScheduler())
-            throw new SkipException("No support for custom schedulers");
+    void testGetState4() throws Exception {
+        assumeTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
         AtomicBoolean completed = new AtomicBoolean();
         try (ExecutorService scheduler = Executors.newFixedThreadPool(1)) {
             Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
             Thread t1 = builder.start(() -> {
                 Thread t2 = builder.unstarted(LockSupport::park);
-                assertTrue(t2.getState() == Thread.State.NEW);
+                assertEquals(Thread.State.NEW, t2.getState());
 
                 // start t2 to make it runnable
                 t2.start();
                 try {
-                    assertTrue(t2.getState() == Thread.State.RUNNABLE);
+                    assertEquals(Thread.State.RUNNABLE, t2.getState());
 
                     // yield to allow t2 to run and park
                     Thread.yield();
-                    assertTrue(t2.getState() == Thread.State.WAITING);
+                    assertEquals(Thread.State.WAITING, t2.getState());
                 } finally {
                     // unpark t2 to make it runnable again
                     LockSupport.unpark(t2);
                 }
 
                 // t2 should be runnable (not mounted)
-                assertTrue(t2.getState() == Thread.State.RUNNABLE);
+                assertEquals(Thread.State.RUNNABLE, t2.getState());
 
                 completed.set(true);
             });
@@ -1739,48 +1740,21 @@ public class ThreadAPI {
     }
 
     /**
-     * Test Thread::getState when thread is parked.
+     * Test Thread::getState when thread is waiting to enter a monitor.
      */
     @Test
-    public void testGetState4() throws Exception {
-        var thread = Thread.ofVirtual().start(LockSupport::park);
-        while (thread.getState() != Thread.State.WAITING) {
-            Thread.sleep(20);
-        }
-        LockSupport.unpark(thread);
-        thread.join();
-    }
-
-    /**
-     * Test Thread::getState when thread is parked while holding a monitor.
-     */
-    @Test
-    public void testGetState5() throws Exception {
-        var thread = Thread.ofVirtual().start(() -> {
-            synchronized (lock) {
-                LockSupport.park();
-            }
-        });
-        while (thread.getState() != Thread.State.WAITING) {
-            Thread.sleep(20);
-        }
-        LockSupport.unpark(thread);
-        thread.join();
-    }
-
-    /**
-     * Test Thread::getState when thread is waiting for a monitor.
-     */
-    @Test
-    public void testGetState6() throws Exception {
+    void testGetState5() throws Exception {
+        var started = new CountDownLatch(1);
         var thread = Thread.ofVirtual().unstarted(() -> {
+            started.countDown();
             synchronized (lock) { }
         });
         synchronized (lock) {
             thread.start();
-            while (thread.getState() != Thread.State.BLOCKED) {
-                Thread.sleep(20);
-            }
+            started.await();
+
+            // wait for thread to block
+            await(thread, Thread.State.BLOCKED);
         }
         thread.join();
     }
@@ -1789,34 +1763,131 @@ public class ThreadAPI {
      * Test Thread::getState when thread is waiting in Object.wait.
      */
     @Test
-    public void testGetState7() throws Exception {
+    void testGetState6() throws Exception {
         var thread = Thread.ofVirtual().start(() -> {
             synchronized (lock) {
                 try { lock.wait(); } catch (InterruptedException e) { }
             }
         });
-        while (thread.getState() != Thread.State.WAITING) {
-            Thread.sleep(20);
+        try {
+            // wait for thread to wait
+            await(thread, Thread.State.WAITING);
+        } finally {
+            thread.interrupt();
+            thread.join();
         }
-        thread.interrupt();
-        thread.join();
     }
 
     /**
-     * Test Thread::getState when thread is terminated.
+     * Test Thread::getState when thread is waiting in Object.wait(millis).
      */
     @Test
-    public void testGetState8() throws Exception {
-        var thread = Thread.ofVirtual().start(() -> { });
-        thread.join();
-        assertTrue(thread.getState() == Thread.State.TERMINATED);
+    void testGetState7() throws Exception {
+        var thread = Thread.ofVirtual().start(() -> {
+            synchronized (lock) {
+                try {
+                    lock.wait(Long.MAX_VALUE);
+                } catch (InterruptedException e) { }
+            }
+        });
+        try {
+            // wait for thread to wait
+            await(thread, Thread.State.TIMED_WAITING);
+        } finally {
+            thread.interrupt();
+            thread.join();
+        }
+    }
+
+    /**
+     * Test Thread::getState when thread is parked.
+     */
+    @Test
+    void testGetState8() throws Exception {
+        var thread = Thread.ofVirtual().start(LockSupport::park);
+        try {
+            await(thread, Thread.State.WAITING);
+        } finally {
+            LockSupport.unpark(thread);
+            thread.join();
+        }
+    }
+
+    /**
+     * Test Thread::getState when thread is timed parked.
+     */
+    @Test
+    void testGetState9() throws Exception {
+        var thread = Thread.ofVirtual().start(() -> LockSupport.parkNanos(Long.MAX_VALUE));
+        try {
+            await(thread, Thread.State.TIMED_WAITING);
+        } finally {
+            LockSupport.unpark(thread);
+            thread.join();
+        }
+    }
+
+    /**
+     * Test Thread::getState when thread is parked while holding a monitor.
+     */
+    @Test
+    void testGetState10() throws Exception {
+        var started = new CountDownLatch(1);
+        var done = new AtomicBoolean();
+        var thread = Thread.ofVirtual().start(() -> {
+            started.countDown();
+            synchronized (lock) {
+                while (!done.get()) {
+                    LockSupport.park();
+                }
+            }
+        });
+        try {
+            // wait for thread to start
+            started.await();
+
+            // wait for thread to park
+            await(thread, Thread.State.WAITING);
+        } finally {
+            done.set(true);
+            LockSupport.unpark(thread);
+            thread.join();
+        }
+    }
+
+    /**
+     * Test Thread::getState when thread is timed parked while holding a monitor.
+     */
+    @Test
+    void testGetState11() throws Exception {
+        var started = new CountDownLatch(1);
+        var done = new AtomicBoolean();
+        var thread = Thread.ofVirtual().start(() -> {
+            started.countDown();
+            synchronized (lock) {
+                while (!done.get()) {
+                    LockSupport.parkNanos(Long.MAX_VALUE);
+                }
+            }
+        });
+        try {
+            // wait for thread to start
+            started.await();
+
+            // wait for thread to park
+            await(thread, Thread.State.TIMED_WAITING);
+        } finally {
+            done.set(true);
+            LockSupport.unpark(thread);
+            thread.join();
+        }
     }
 
     /**
      * Test Thread::isAlive.
      */
     @Test
-    public void testIsAlive1() throws Exception {
+    void testIsAlive1() throws Exception {
         // unstarted
         var thread = Thread.ofVirtual().unstarted(LockSupport::park);
         assertFalse(thread.isAlive());
@@ -1835,10 +1906,10 @@ public class ThreadAPI {
     }
 
     /**
-     * Test Thread.holdLock when lock not held.
+     * Test Thread.holdsLock when lock not held.
      */
     @Test
-    public void testHoldsLock1() throws Exception {
+    void testHoldsLock1() throws Exception {
         VThreadRunner.run(() -> {
             var lock = new Object();
             assertFalse(Thread.holdsLock(lock));
@@ -1846,10 +1917,10 @@ public class ThreadAPI {
     }
 
     /**
-     * Test Thread.holdLock when lock held.
+     * Test Thread.holdsLock when lock held.
      */
     @Test
-    public void testHoldsLock2() throws Exception {
+    void testHoldsLock2() throws Exception {
         VThreadRunner.run(() -> {
             var lock = new Object();
             synchronized (lock) {
@@ -1862,7 +1933,7 @@ public class ThreadAPI {
      * Test Thread::getStackTrace on unstarted thread.
      */
     @Test
-    public void testGetStackTrace1() {
+    void testGetStackTrace1() {
         var thread = Thread.ofVirtual().unstarted(() -> { });
         StackTraceElement[] stack = thread.getStackTrace();
         assertTrue(stack.length == 0);
@@ -1872,9 +1943,8 @@ public class ThreadAPI {
      * Test Thread::getStackTrace on thread that has been started but has not run.
      */
     @Test
-    public void testGetStackTrace2() throws Exception {
-        if (!ThreadBuilders.supportsCustomScheduler())
-            throw new SkipException("Requires continuations support");
+    void testGetStackTrace2() throws Exception {
+        assumeTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
         Executor scheduler = task -> { };
         Thread.Builder builder = ThreadBuilders.virtualThreadBuilder(scheduler);
         Thread thread = builder.start(() -> { });
@@ -1886,7 +1956,7 @@ public class ThreadAPI {
      * Test Thread::getStackTrace on running thread.
      */
     @Test
-    public void testGetStackTrace3() throws Exception {
+    void testGetStackTrace3() throws Exception {
         var sel = Selector.open();
         var thread = Thread.ofVirtual().start(() -> {
             try { sel.select(); } catch (Exception e) { }
@@ -1906,9 +1976,8 @@ public class ThreadAPI {
      * Test Thread::getStackTrace on thread waiting in Object.wait.
      */
     @Test
-    public void testGetStackTrace4() throws Exception {
-        if (!ThreadBuilders.supportsCustomScheduler())
-            throw new SkipException("No support for custom schedulers");
+    void testGetStackTrace4() throws Exception {
+        assumeTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
         try (ForkJoinPool pool = new ForkJoinPool(1)) {
             AtomicReference<Thread> ref = new AtomicReference<>();
             Executor scheduler = task -> {
@@ -1934,9 +2003,7 @@ public class ThreadAPI {
             }
 
             // wait for virtual thread to block in wait
-            while (vthread.getState() != Thread.State.WAITING) {
-                Thread.sleep(20);
-            }
+            await(vthread, Thread.State.WAITING);
 
             // get stack trace of both carrier and virtual thread
             StackTraceElement[] carrierStackTrace = carrier.getStackTrace();
@@ -1961,14 +2028,9 @@ public class ThreadAPI {
      * Test Thread::getStackTrace on parked thread.
      */
     @Test
-    public void testGetStackTrace5() throws Exception {
+    void testGetStackTrace5() throws Exception {
         var thread = Thread.ofVirtual().start(LockSupport::park);
-
-        // wait for thread to park
-        while (thread.getState() != Thread.State.WAITING) {
-            Thread.sleep(20);
-        }
-
+        await(thread, Thread.State.WAITING);
         try {
             StackTraceElement[] stack = thread.getStackTrace();
             assertTrue(contains(stack, "LockSupport.park"));
@@ -1979,10 +2041,76 @@ public class ThreadAPI {
     }
 
     /**
+     * Test Thread::getStackTrace on timed-parked thread.
+     */
+    @Test
+    void testGetStackTrace6() throws Exception {
+        var thread = Thread.ofVirtual().start(() -> {
+            LockSupport.parkNanos(Long.MAX_VALUE);
+        });
+        await(thread, Thread.State.TIMED_WAITING);
+        try {
+            StackTraceElement[] stack = thread.getStackTrace();
+            assertTrue(contains(stack, "LockSupport.parkNanos"));
+        } finally {
+            LockSupport.unpark(thread);
+            thread.join();
+        }
+    }
+
+    /**
+     * Test Thread::getStackTrace on parked thread that is pinned.
+     */
+    @Test
+    void testGetStackTrace7() throws Exception {
+        AtomicBoolean done = new AtomicBoolean();
+        var thread = Thread.ofVirtual().start(() -> {
+            VThreadPinner.runPinned(() -> {
+                while (!done.get()) {
+                    LockSupport.park();
+                }
+            });
+        });
+        await(thread, Thread.State.WAITING);
+        try {
+            StackTraceElement[] stack = thread.getStackTrace();
+            assertTrue(contains(stack, "LockSupport.park"));
+        } finally {
+            done.set(true);
+            LockSupport.unpark(thread);
+            thread.join();
+        }
+    }
+
+    /**
+     * Test Thread::getStackTrace on timed-parked thread that is pinned.
+     */
+    @Test
+    void testGetStackTrace8() throws Exception {
+        AtomicBoolean done = new AtomicBoolean();
+        var thread = Thread.ofVirtual().start(() -> {
+            VThreadPinner.runPinned(() -> {
+                while (!done.get()) {
+                    LockSupport.parkNanos(Long.MAX_VALUE);
+                }
+            });
+        });
+        await(thread, Thread.State.TIMED_WAITING);
+        try {
+            StackTraceElement[] stack = thread.getStackTrace();
+            assertTrue(contains(stack, "LockSupport.parkNanos"));
+        } finally {
+            done.set(true);
+            LockSupport.unpark(thread);
+            thread.join();
+        }
+    }
+
+    /**
      * Test Thread::getStackTrace on terminated thread.
      */
     @Test
-    public void testGetStackTrace6() throws Exception {
+    void testGetStackTrace9() throws Exception {
         var thread = Thread.ofVirtual().start(() -> { });
         thread.join();
         StackTraceElement[] stack = thread.getStackTrace();
@@ -1993,7 +2121,7 @@ public class ThreadAPI {
      * Test that Thread.getAllStackTraces does not include virtual threads.
      */
     @Test
-    public void testGetAllStackTraces1() throws Exception {
+    void testGetAllStackTraces1() throws Exception {
         VThreadRunner.run(() -> {
             Set<Thread> threads = Thread.getAllStackTraces().keySet();
             assertFalse(threads.stream().anyMatch(Thread::isVirtual));
@@ -2004,9 +2132,8 @@ public class ThreadAPI {
      * Test that Thread.getAllStackTraces includes carrier threads.
      */
     @Test
-    public void testGetAllStackTraces2() throws Exception {
-        if (!ThreadBuilders.supportsCustomScheduler())
-            throw new SkipException("No support for custom schedulers");
+    void testGetAllStackTraces2() throws Exception {
+        assumeTrue(ThreadBuilders.supportsCustomScheduler(), "No support for custom schedulers");
         try (ForkJoinPool pool = new ForkJoinPool(1)) {
             AtomicReference<Thread> ref = new AtomicReference<>();
             Executor scheduler = task -> {
@@ -2032,9 +2159,7 @@ public class ThreadAPI {
             }
 
             // wait for virtual thread to block in wait
-            while (vthread.getState() != Thread.State.WAITING) {
-                Thread.sleep(20);
-            }
+            await(vthread, Thread.State.WAITING);
 
             // get all stack traces
             Map<Thread, StackTraceElement[]> map = Thread.getAllStackTraces();
@@ -2046,12 +2171,12 @@ public class ThreadAPI {
 
             // get stack trace for the carrier thread
             StackTraceElement[] stackTrace = map.get(carrier);
-            assertTrue(stackTrace != null);
+            assertNotNull(stackTrace);
             assertTrue(contains(stackTrace, "java.util.concurrent.ForkJoinPool"));
             assertFalse(contains(stackTrace, "java.lang.Object.wait"));
 
             // there should be no stack trace for the virtual thread
-            assertTrue(map.get(vthread) == null);
+            assertNull(map.get(vthread));
         }
     }
 
@@ -2065,29 +2190,29 @@ public class ThreadAPI {
      * Test Thread::getThreadGroup on virtual thread created by platform thread.
      */
     @Test
-    public void testThreadGroup1() throws Exception {
+    void testThreadGroup1() throws Exception {
         var thread = Thread.ofVirtual().unstarted(LockSupport::park);
         var vgroup = thread.getThreadGroup();
         thread.start();
         try {
-            assertTrue(thread.getThreadGroup() == vgroup);
+            assertEquals(vgroup, thread.getThreadGroup());
         } finally {
             LockSupport.unpark(thread);
             thread.join();
         }
-        assertTrue(thread.getThreadGroup() == null);
+        assertNull(thread.getThreadGroup());
     }
 
     /**
      * Test Thread::getThreadGroup on platform thread created by virtual thread.
      */
     @Test
-    public void testThreadGroup2() throws Exception {
+    void testThreadGroup2() throws Exception {
         VThreadRunner.run(() -> {
             ThreadGroup vgroup = Thread.currentThread().getThreadGroup();
             Thread child = new Thread(() -> { });
             ThreadGroup group = child.getThreadGroup();
-            assertTrue(group == vgroup);
+            assertEquals(vgroup, group);
         });
     }
 
@@ -2096,7 +2221,7 @@ public class ThreadAPI {
      * created with 2-arg ThreadGroup constructor.
      */
     @Test
-    public void testThreadGroup3() throws Exception {
+    void testThreadGroup3() throws Exception {
         var ref = new AtomicReference<ThreadGroup>();
         var thread = Thread.startVirtualThread(() -> {
             ref.set(Thread.currentThread().getThreadGroup());
@@ -2104,19 +2229,19 @@ public class ThreadAPI {
         thread.join();
 
         ThreadGroup vgroup = ref.get();
-        assertTrue(vgroup.getMaxPriority() == Thread.MAX_PRIORITY);
+        assertEquals(Thread.MAX_PRIORITY, vgroup.getMaxPriority());
 
         ThreadGroup group = new ThreadGroup(vgroup, "group");
         assertTrue(group.getParent() == vgroup);
-        assertTrue(group.getMaxPriority() == Thread.MAX_PRIORITY);
+        assertEquals(Thread.MAX_PRIORITY, group.getMaxPriority());
 
         vgroup.setMaxPriority(Thread.MAX_PRIORITY - 1);
-        assertTrue(vgroup.getMaxPriority() == Thread.MAX_PRIORITY);
-        assertTrue(group.getMaxPriority() == Thread.MAX_PRIORITY - 1);
+        assertEquals(Thread.MAX_PRIORITY, vgroup.getMaxPriority());
+        assertEquals(Thread.MAX_PRIORITY - 1, group.getMaxPriority());
 
         vgroup.setMaxPriority(Thread.MIN_PRIORITY);
-        assertTrue(vgroup.getMaxPriority() == Thread.MAX_PRIORITY);
-        assertTrue(group.getMaxPriority() == Thread.MIN_PRIORITY);
+        assertEquals(Thread.MAX_PRIORITY, vgroup.getMaxPriority());
+        assertEquals(Thread.MIN_PRIORITY, group.getMaxPriority());
     }
 
     /**
@@ -2124,23 +2249,22 @@ public class ThreadAPI {
      * created with 1-arg ThreadGroup constructor.
      */
     @Test
-    public void testThreadGroup4() throws Exception {
+    void testThreadGroup4() throws Exception {
         VThreadRunner.run(() -> {
             ThreadGroup vgroup = Thread.currentThread().getThreadGroup();
-
-            assertTrue(vgroup.getMaxPriority() == Thread.MAX_PRIORITY);
+            assertEquals(Thread.MAX_PRIORITY, vgroup.getMaxPriority());
 
             ThreadGroup group = new ThreadGroup("group");
-            assertTrue(group.getParent() == vgroup);
-            assertTrue(group.getMaxPriority() == Thread.MAX_PRIORITY);
+            assertEquals(vgroup, group.getParent());
+            assertEquals(Thread.MAX_PRIORITY, group.getMaxPriority());
 
             vgroup.setMaxPriority(Thread.MAX_PRIORITY - 1);
-            assertTrue(vgroup.getMaxPriority() == Thread.MAX_PRIORITY);
-            assertTrue(group.getMaxPriority() == Thread.MAX_PRIORITY - 1);
+            assertEquals(Thread.MAX_PRIORITY, vgroup.getMaxPriority());
+            assertEquals(Thread.MAX_PRIORITY - 1, group.getMaxPriority());
 
             vgroup.setMaxPriority(Thread.MIN_PRIORITY);
-            assertTrue(vgroup.getMaxPriority() == Thread.MAX_PRIORITY);
-            assertTrue(group.getMaxPriority() == Thread.MIN_PRIORITY);
+            assertEquals(Thread.MAX_PRIORITY, vgroup.getMaxPriority());
+            assertEquals(Thread.MIN_PRIORITY, group.getMaxPriority());
         });
     }
 
@@ -2148,12 +2272,12 @@ public class ThreadAPI {
      * Test Thread.enumerate(false).
      */
     @Test
-    public void testEnumerate1() throws Exception {
+    void testEnumerate1() throws Exception {
         VThreadRunner.run(() -> {
             ThreadGroup vgroup = Thread.currentThread().getThreadGroup();
             Thread[] threads = new Thread[100];
             int n = vgroup.enumerate(threads, /*recurse*/false);
-            assertTrue(n == 0);
+            assertFalse(Arrays.stream(threads, 0, n).anyMatch(Thread::isVirtual));
         });
     }
 
@@ -2161,7 +2285,7 @@ public class ThreadAPI {
      * Test Thread.enumerate(true).
      */
     @Test
-    public void testEnumerate2() throws Exception {
+    void testEnumerate2() throws Exception {
         VThreadRunner.run(() -> {
             ThreadGroup vgroup = Thread.currentThread().getThreadGroup();
             Thread[] threads = new Thread[100];
@@ -2174,15 +2298,15 @@ public class ThreadAPI {
      * Test equals and hashCode.
      */
     @Test
-    public void testEqualsAndHashCode() throws Exception {
+    void testEqualsAndHashCode() throws Exception {
         Thread vthread1 = Thread.ofVirtual().unstarted(LockSupport::park);
         Thread vthread2 = Thread.ofVirtual().unstarted(LockSupport::park);
 
         // unstarted
-        assertEquals(vthread1, vthread1);
-        assertNotEquals(vthread1, vthread2);
-        assertEquals(vthread2, vthread2);
-        assertNotEquals(vthread2, vthread1);
+        assertTrue(vthread1.equals(vthread1));
+        assertTrue(vthread2.equals(vthread2));
+        assertFalse(vthread1.equals(vthread2));
+        assertFalse(vthread2.equals(vthread1));
         int hc1 = vthread1.hashCode();
         int hc2 = vthread2.hashCode();
 
@@ -2190,10 +2314,10 @@ public class ThreadAPI {
         vthread2.start();
         try {
             // started, maybe running or parked
-            assertEquals(vthread1, vthread1);
-            assertNotEquals(vthread1, vthread2);
-            assertEquals(vthread2, vthread2);
-            assertNotEquals(vthread2, vthread1);
+            assertTrue(vthread1.equals(vthread1));
+            assertTrue(vthread2.equals(vthread2));
+            assertFalse(vthread1.equals(vthread2));
+            assertFalse(vthread2.equals(vthread1));
             assertTrue(vthread1.hashCode() == hc1);
             assertTrue(vthread2.hashCode() == hc2);
         } finally {
@@ -2204,10 +2328,10 @@ public class ThreadAPI {
         vthread2.join();
 
         // terminated
-        assertEquals(vthread1, vthread1);
-        assertNotEquals(vthread1, vthread2);
-        assertEquals(vthread2, vthread2);
-        assertNotEquals(vthread2, vthread1);
+        assertTrue(vthread1.equals(vthread1));
+        assertTrue(vthread2.equals(vthread2));
+        assertFalse(vthread1.equals(vthread2));
+        assertFalse(vthread2.equals(vthread1));
         assertTrue(vthread1.hashCode() == hc1);
         assertTrue(vthread2.hashCode() == hc2);
     }
@@ -2216,7 +2340,7 @@ public class ThreadAPI {
      * Test toString on unstarted thread.
      */
     @Test
-    public void testToString1() {
+    void testToString1() {
         Thread thread = Thread.ofVirtual().unstarted(() -> { });
         thread.setName("fred");
         assertTrue(thread.toString().contains("fred"));
@@ -2226,7 +2350,7 @@ public class ThreadAPI {
      * Test toString on running thread.
      */
     @Test
-    public void testToString2() throws Exception {
+    void testToString2() throws Exception {
         VThreadRunner.run(() -> {
             Thread me = Thread.currentThread();
             me.setName("fred");
@@ -2238,15 +2362,13 @@ public class ThreadAPI {
      * Test toString on parked thread.
      */
     @Test
-    public void testToString3() throws Exception {
+    void testToString3() throws Exception {
         Thread thread = Thread.ofVirtual().start(() -> {
             Thread me = Thread.currentThread();
             me.setName("fred");
             LockSupport.park();
         });
-        while (thread.getState() != Thread.State.WAITING) {
-            Thread.sleep(10);
-        }
+        await(thread, Thread.State.WAITING);
         try {
             assertTrue(thread.toString().contains("fred"));
         } finally {
@@ -2259,7 +2381,7 @@ public class ThreadAPI {
      * Test toString on terminated thread.
      */
     @Test
-    public void testToString4() throws Exception {
+    void testToString4() throws Exception {
         Thread thread = Thread.ofVirtual().start(() -> {
             Thread me = Thread.currentThread();
             me.setName("fred");
@@ -2269,23 +2391,38 @@ public class ThreadAPI {
     }
 
     /**
-     * Waits for the given thread to park.
+     * Thread.UncaughtExceptionHandler that captures the first exception thrown.
      */
-    static void awaitParked(Thread thread) throws InterruptedException {
-        Thread.State state = thread.getState();
-        while (state != Thread.State.WAITING && state != Thread.State.TIMED_WAITING) {
-            assertTrue(state != Thread.State.TERMINATED, "Thread has terminated");
-            Thread.sleep(10);
-            state = thread.getState();
+    private static class CapturingUHE implements Thread.UncaughtExceptionHandler {
+        Thread thread;
+        Throwable exception;
+        @Override
+        public void uncaughtException(Thread t, Throwable e) {
+            synchronized (this) {
+                if (thread == null) {
+                    this.thread = t;
+                    this.exception = e;
+                }
+            }
+        }
+        Thread thread() {
+            synchronized (this) {
+                return thread;
+            }
+        }
+        Throwable exception() {
+            synchronized (this) {
+                return exception;
+            }
         }
     }
 
     /**
-     * Waits for the given thread to block waiting on a monitor.
+     * Waits for the given thread to reach a given state.
      */
-    static void awaitBlocked(Thread thread) throws InterruptedException {
+    private void await(Thread thread, Thread.State expectedState) throws InterruptedException {
         Thread.State state = thread.getState();
-        while (state != Thread.State.BLOCKED) {
+        while (state != expectedState) {
             assertTrue(state != Thread.State.TERMINATED, "Thread has terminated");
             Thread.sleep(10);
             state = thread.getState();
