@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2013, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2013, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -48,7 +48,7 @@ public class TestGCConfigurationEventWithDefaultPauseTarget {
         recording.stop();
         List<RecordedEvent> events = Events.fromRecording(recording);
         assertGreaterThanOrEqual(events.size(), 1, "Expected at least 1 event");
-        DefaultGCConfigurationVerifier verifier = new DefaultGCConfigurationVerifier(events.get(0));
+        DefaultGCConfigurationVerifier verifier = new DefaultGCConfigurationVerifier(events.getFirst());
         verifier.verify();
     }
 }
