@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2021, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -22,8 +22,6 @@
  */
 package org.openjdk.bench.java.lang.foreign;
 
-import java.lang.foreign.Addressable;
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
 import org.openjdk.jmh.annotations.Benchmark;
 import org.openjdk.jmh.annotations.BenchmarkMode;
@@ -43,7 +41,7 @@ import static org.openjdk.bench.java.lang.foreign.CallOverheadHelper.*;
 @Measurement(iterations = 10, time = 500, timeUnit = TimeUnit.MILLISECONDS)
 @State(org.openjdk.jmh.annotations.Scope.Thread)
 @OutputTimeUnit(TimeUnit.NANOSECONDS)
-@Fork(value = 3, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED", "--enable-preview" })
+@Fork(value = 3, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED", "-Djava.library.path=micro/native" })
 public class CallOverheadVirtual {
 
     @Benchmark
@@ -54,6 +52,11 @@ public class CallOverheadVirtual {
     @Benchmark
     public void panama_blank() throws Throwable {
         func_v.invokeExact(func_addr);
+    }
+
+    @Benchmark
+    public void panama_blank_critical() throws Throwable {
+        func_critical_v.invokeExact(func_addr);
     }
 
     @Benchmark
@@ -81,43 +84,23 @@ public class CallOverheadVirtual {
     }
 
     @Benchmark
-    public MemoryAddress panama_identity_memory_address_shared() throws Throwable {
-        return (MemoryAddress) identity_memory_address_v.invokeExact(identity_memory_address_addr, (Addressable)sharedPoint.address());
+    public MemorySegment panama_identity_memory_address_shared() throws Throwable {
+        return (MemorySegment) identity_memory_address_v.invokeExact(identity_memory_address_addr, sharedPoint);
     }
 
     @Benchmark
-    public MemoryAddress panama_identity_memory_address_confined() throws Throwable {
-        return (MemoryAddress) identity_memory_address_v.invokeExact(identity_memory_address_addr, (Addressable)confinedPoint.address());
+    public MemorySegment panama_identity_memory_address_confined() throws Throwable {
+        return (MemorySegment) identity_memory_address_v.invokeExact(identity_memory_address_addr, confinedPoint);
     }
 
     @Benchmark
-    public MemoryAddress panama_identity_memory_address_shared_3() throws Throwable {
-        return (MemoryAddress) identity_memory_address_3_v.invokeExact(identity_memory_address_3_addr, (Addressable)sharedPoint.address(), (Addressable)sharedPoint.address(), (Addressable)sharedPoint.address());
+    public MemorySegment panama_identity_memory_address_shared_3() throws Throwable {
+        return (MemorySegment) identity_memory_address_3_v.invokeExact(identity_memory_address_3_addr, sharedPoint, sharedPoint, sharedPoint);
     }
 
     @Benchmark
-    public MemoryAddress panama_identity_memory_address_confined_3() throws Throwable {
-        return (MemoryAddress) identity_memory_address_3_v.invokeExact(identity_memory_address_3_addr, (Addressable)confinedPoint.address(), (Addressable)confinedPoint.address(), (Addressable)confinedPoint.address());
-    }
-
-    @Benchmark
-    public MemoryAddress panama_identity_struct_ref_shared() throws Throwable {
-        return (MemoryAddress) identity_memory_address_v.invokeExact(identity_struct_addr, (Addressable)sharedPoint);
-    }
-
-    @Benchmark
-    public MemoryAddress panama_identity_struct_ref_confined() throws Throwable {
-        return (MemoryAddress) identity_memory_address_v.invokeExact(identity_struct_addr, (Addressable)confinedPoint);
-    }
-
-    @Benchmark
-    public MemoryAddress panama_identity_struct_ref_shared_3() throws Throwable {
-        return (MemoryAddress) identity_memory_address_3_v.invokeExact(identity_struct_3_addr, (Addressable)sharedPoint, (Addressable)sharedPoint, (Addressable)sharedPoint);
-    }
-
-    @Benchmark
-    public MemoryAddress panama_identity_struct_ref_confined_3() throws Throwable {
-        return (MemoryAddress) identity_memory_address_3_v.invokeExact(identity_struct_3_addr, (Addressable)confinedPoint, (Addressable)confinedPoint, (Addressable)confinedPoint);
+    public MemorySegment panama_identity_memory_address_confined_3() throws Throwable {
+        return (MemorySegment) identity_memory_address_3_v.invokeExact(identity_memory_address_3_addr, confinedPoint, confinedPoint, confinedPoint);
     }
 
     @Benchmark
@@ -126,13 +109,18 @@ public class CallOverheadVirtual {
     }
 
     @Benchmark
+    public int panama_identity_critical() throws Throwable {
+        return (int) identity_critical_v.invokeExact(identity_addr, 10);
+    }
+
+    @Benchmark
     public MemorySegment panama_identity_struct() throws Throwable {
         return (MemorySegment) identity_struct_v.invokeExact(identity_struct_addr, recycling_allocator, point);
     }
 
     @Benchmark
-    public MemoryAddress panama_identity_memory_address_null() throws Throwable {
-        return (MemoryAddress) identity_memory_address_v.invokeExact(identity_memory_address_addr, (Addressable)MemoryAddress.NULL);
+    public MemorySegment panama_identity_memory_address_null() throws Throwable {
+        return (MemorySegment) identity_memory_address_v.invokeExact(identity_memory_address_addr, MemorySegment.NULL);
     }
 
     @Benchmark
